--- a/index.html
+++ b/index.html
@@ -73,6 +73,21 @@
                     I am happy to collaborate or just chat about research, my email is
                     <a href="mailto:qiz065@ucsd.edu">qiz065@ucsd.edu</a>.
                     </p>
+                    <details class="research-curiosity">
+                        <summary>Research Curiosity</summary>
+                        <p>
+                            Beyond above, I also like exploring <strong>psychology, cognitive science,
+                                neuroscience, biology, and social sciences</strong> in my spare time, and I am
+                            particularly
+                            curious about how insights from these fields can inform the design of more
+                            robust, interpretable, and human-centered AI systems.
+                        </p>
+                        <p>
+                            I believe many impactful research ideas emerge not from incremental progress
+                            within a single field, but from <strong>cross-disciplinary connections</strong>
+                            that reveal shared structures and assumptions.
+                        </p>
+                    </details>
 
                     <div class="research-tags">
                         <span class="tag">🤝 AI for Social Good</span>
