--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <a href="mailto:qiz065@ucsd.edu">qiz065@ucsd.edu</a>.
                     </p>
                     <details class="research-curiosity">
-                        <summary>Research Curiosity</summary>
+                        <summary>Other Curiosity</summary>
                         <p>
                             Beyond above, I also like exploring <strong>psychology, cognitive science,
                                 neuroscience, biology, and social sciences</strong> in my spare time, and I am
