--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
                             Beyond above, I also like exploring <strong>psychology, cognitive science,
                                 neuroscience, biology, and social sciences</strong> in my spare time, and I am
                             particularly
-                            curious about how insights from these fields can inform the design of more
-                            robust, interpretable, and human-centered AI systems.
+                            curious about how insights from these fields can inform my own research interests. 
                         </p>
                         <p>
                             I believe many impactful research ideas emerge not from incremental progress
