--- a/index.html
+++ b/index.html
@@ -79,12 +79,11 @@
                             Beyond above, I also like exploring <strong>psychology, cognitive science,
                                 neuroscience, biology, and social sciences</strong> in my spare time, and I am
                             particularly
-                            curious about how insights from these fields can inform my own research interests. 
+                            curious about how insights from these fields can inform my own research. 
                         </p>
                         <p>
                             I believe many impactful research ideas emerge not from incremental progress
-                            within a single field, but from <strong>cross-disciplinary connections</strong>
-                            that reveal shared structures and assumptions.
+                            within a single field, but from <strong>cross-disciplinary connections</strong>.
                         </p>
                     </details>
 
