--- a/blog.html
+++ b/blog.html
@@ -12,17 +12,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
-        <div class="nav-container">
-            <div class="nav-links">
-                <a href="index.html">Home</a>
-                <a href="index.html#publications">Papers</a>
-                <a href="index.html#news">News</a>
-                <a href="blog.html" style="border-bottom: 2px solid var(--primary-color);">Blog</a>
-                <a href="cv.html">CV</a>
-            </div>
+    <header class="site-header">
+        <div class="header-container">
+            <h1 class="main-name">Qinshi (Carol) Zhang</h1>
+            <nav class="main-nav">
+                <div class="nav-links">
+                    <a href="index.html">Home</a>
+                    <a href="index.html#publications">Papers</a>
+                    <a href="index.html#news">News</a>
+                    <a href="blog.html" class="active">Blog</a>
+                    <a href="cv.html">CV</a>
+                </div>
+            </nav>
         </div>
-    </nav>
+    </header>
     <main>
         <section>
             <h2>Blog</h2>
