--- a/cv.html
+++ b/cv.html
@@ -14,20 +14,22 @@
 </head>
 
 <body>
-    <nav>
-        <div class="nav-container">
-            <div class="nav-links">
-                <a href="index.html">Home</a>
-                <a href="index.html#publications">Papers</a>
-                <a href="index.html#news">News</a>
-                <a href="blog.html">Blog</a>
-                <a href="cv.html" class="active">CV</a>
-            </div>
+    <header class="site-header">
+        <div class="header-container">
+            <h1 class="main-name">Qinshi (Carol) Zhang</h1>
+            <nav class="main-nav">
+                <div class="nav-links">
+                    <a href="index.html">Home</a>
+                    <a href="index.html#publications">Papers</a>
+                    <a href="index.html#news">News</a>
+                    <a href="blog.html">Blog</a>
+                    <a href="cv.html" class="active">CV</a>
+                </div>
+            </nav>
         </div>
-    </nav>
+    </header>
 
     <header class="cv-header">
-        <h1>Qinshi (Carol) Zhang</h1>
         <div class="contact-info">
             <a href="https://carolzhangzz.github.io/">carolzhangzz.github.io</a>
             <span class="separator">|</span>
