--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h1 class="main-name">Qinshi (Carol) Zhang</h1>
             <nav class="main-nav">
                 <div class="nav-links">
-                    <a href="index.html">Home</a>
+                    <a href="index.html" class="active">Home</a>
                     <a href="index.html#publications">Papers</a>
                     <a href="index.html#news">News</a>
                     <a href="./blog.html">Blog</a>
