--- a/blog.html
+++ b/blog.html
@@ -27,10 +27,24 @@
         </div>
     </header>
     <main>
-        <section>
-            <h2>Blog</h2>
-            <div style="padding: 4rem 0; text-align: center; font-style: italic; color: var(--text-muted);">
-                <p>Coming soon...</p>
+        <section class="blog-list-section">
+            <h2 style="margin-bottom: 2rem; border-bottom: 1px solid var(--border-color); padding-bottom: 0.5rem;">Blog</h2>
+            
+            <div class="blog-list">
+                <!-- Blog Post 1 -->
+                <a href="rethinking-researcher.html" class="blog-card">
+                    <div class="blog-card-header">
+                        <h3 class="blog-card-title">Rethinking the Future Researcher in the Age of Human–AI Co-Research</h3>
+                        <p class="blog-card-meta">January 1, 2026 | Thought Piece</p>
+                    </div>
+                    <p class="blog-card-excerpt">What does it mean to be a researcher when AI can read, generate, and experiment alongside us? I explore the shifting roles of humans from executors to supervisors in the cognitive era.</p>
+                    <span class="blog-card-more">Read More →</span>
+                </a>
+
+                <!-- Future posts placeholder -->
+                <div style="padding: 2rem 0; border-top: 1px solid var(--border-color); font-style: italic; color: var(--text-muted);">
+                    <p>More thoughts coming soon...</p>
+                </div>
             </div>
         </section>
     </main>
