--- a/blog.html
+++ b/blog.html
@@ -31,6 +31,16 @@
             <h2 style="margin-bottom: 2rem; border-bottom: 1px solid var(--border-color); padding-bottom: 0.5rem;">Blog</h2>
             
             <div class="blog-list">
+                <!-- Blog Post 2 -->
+                <a href="human-ai-interaction.html" class="blog-card">
+                    <div class="blog-card-header">
+                        <h3 class="blog-card-title">Human–AI Interaction as a Socio-Technical Process</h3>
+                        <p class="blog-card-meta">January 2, 2026 | Research Vision</p>
+                    </div>
+                    <p class="blog-card-excerpt">Human–AI Interaction is not primarily about interfaces or prompts. It is about how human judgment and biases become embedded into AI systems across their entire lifecycle, from data to deployment.</p>
+                    <span class="blog-card-more">Read More →</span>
+                </a>
+
                 <!-- Blog Post 1 -->
                 <a href="rethinking-researcher.html" class="blog-card">
                     <div class="blog-card-header">
