--- a/cv.html
+++ b/cv.html
@@ -52,7 +52,7 @@
                 <div class="cv-item-main">
                     <h3 class="institution">University of California, San Diego (UCSD)</h3>
                     <p class="degree">Master of Science in Computer Science and Engineering</p>
-                    <p class="curriculum"><strong>Current Curriculum:</strong> Programmers are humans too, Statistical
+                    <p class="curriculum"><strong>Curriculum:</strong> Programmers are humans too, Statistical
                         Natural Language Processing, Fairness Machine Learning, Interactive Design, Human-Centered AI</p>
                 </div>
                 <div class="cv-item-side">
