--- a/blog.html
+++ b/blog.html
@@ -31,6 +31,16 @@
             <h2 style="margin-bottom: 2rem; border-bottom: 1px solid var(--border-color); padding-bottom: 0.5rem;">Blog</h2>
             
             <div class="blog-list">
+                <!-- Blog Post 3 -->
+                <a href="spin-locking-ai.html" class="blog-card">
+                    <div class="blog-card-header">
+                        <h3 class="blog-card-title">When Order Emerges from Noise: What Spin-Locking Teaches Us About Human–AI Systems</h3>
+                        <p class="blog-card-meta">January 1, 2026 | Systems & Theory</p>
+                    </div>
+                    <p class="blog-card-excerpt">What if bias, hallucination, and mode collapse are emergent properties of complex systems? Using insights from statistical physics, I explore how stable behavioral patterns "lock" in large-scale AI.</p>
+                    <span class="blog-card-more">Read More →</span>
+                </a>
+
                 <!-- Blog Post 2 -->
                 <a href="human-ai-interaction.html" class="blog-card">
                     <div class="blog-card-header">
