--- a/blog.html
+++ b/blog.html
@@ -31,8 +31,8 @@
             <h2 style="margin-bottom: 2rem; border-bottom: 1px solid var(--border-color); padding-bottom: 0.5rem;">Blog</h2>
             
             <div class="blog-list">
-                <!-- Blog Post 3 -->
-                <a href="spin-locking-ai.html" class="blog-card">
+                <!-- Blog Post 3 (Add 'hidden' class to hide this post) -->
+                <a href="spin-locking-ai.html" class="blog-card hidden">
                     <div class="blog-card-header">
                         <h3 class="blog-card-title">When Order Emerges from Noise: What Spin-Locking Teaches Us About Human–AI Systems</h3>
                         <p class="blog-card-meta">January 1, 2026 | Systems & Theory</p>
