Update education status and remove GPA

--- a/cv.html
+++ b/cv.html
@@ -57,14 +57,14 @@
                 </div>
                 <div class="cv-item-side">
                     <span class="location">San Diego, CA</span>
-                    <span class="date">Sept. 2024 — Dec. 2025 (Expected)</span>
+                    <span class="date">Sept. 2024 — Dec. 2025</span>
                 </div>
             </div>
 
             <div class="cv-item">
                 <div class="cv-item-main">
                     <h3 class="institution">University of California, Irvine (UCI)</h3>
-                    <p class="degree">GSTAR in Computer Science, GPA: 3.84/4.00</p>
+                    <p class="degree">GSTAR in Computer Science</p>
                 </div>
                 <div class="cv-item-side">
                     <span class="location">Irvine, CA</span>
@@ -77,7 +77,7 @@
                     <h3 class="institution">China Jiliang University (CJLU) & Auckland University of Technology (AUT)
                     </h3>
                     <p class="degree">Bachelor of Computer and Information Sciences & B.Eng in Computer Science and
-                        Technology, GPA: 7.13/9.00</p>
+                        Technology</p>
                     <p class="thesis">Thesis: Gstreamer-based Video Analysis Framework Design. Advisor: Dr. Haijun Tao &
                         Dr. Lin Xiang</p>
                 </div>
