--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
             <div class="profile-layout">
                 <div class="profile-sidebar">
                     <img src="./images/carol.png" alt="Carol Zhang" class="profile-photo">
-                    <p class="profile-status">CS Master's Student @ UC San Diego'25</p>
+                    <p class="profile-status">CS Master @ UC San Diego'25</p>
                 </div>
 
                 <div class="profile-content-text">
-                    <p>Hi, I'm Carol Zhang. I'm currently a Computer Science Master student at the University
+                    <p>Hi, I'm Carol Zhang. I'm a Computer Science Master graduate from the University
                         of California, San Diego (UCSD).
                     </p>
 
