--- a/cv.html
+++ b/cv.html
@@ -124,7 +124,8 @@
                     LC†</p>
                 <p class="venue">CHI Conference on Human Factors in Computing Systems 2025</p>
                 <div class="pub-links">
-                    <a href="https://ecoecho.duckdns.org/"><i class="fas fa-play"></i> Demo</a>
+                    <a href="https://recfro.github.io/eco-echo/"><i class="fas fa-project-diagram"></i> Project</a>
+                    <a href="https://www.youtube.com/watch?v=SMYBmhHFi0k&t=67s"><i class="fas fa-video"></i> Video</a>
                     <a href="./PDF/GameSustainability_CHI_25__Clean_Version_.pdf"><i class="fas fa-file-pdf"></i>
                         PDF</a>
                     <a href="https://github.com/Carolzhangzz/Eco_Echo"><i class="fas fa-code"></i> Code <span
