--- a/index.html
+++ b/index.html
@@ -189,7 +189,8 @@
                             Hendra, Ray LC†</p>
                         <p class="venue">CHI Conference on Human Factors in Computing Systems 2025</p>
                         <div class="publication-links">
-                            <a href="https://ecoecho.duckdns.org/">Demo</a>
+                            <a href="https://recfro.github.io/eco-echo/">Project</a>
+                            <a href="https://www.youtube.com/watch?v=SMYBmhHFi0k&t=67s">Video</a>
                             <a href="https://dl.acm.org/doi/10.1145/3706598.3713661">PDF</a>
                             <a href="https://github.com/Carolzhangzz/Eco_Echo">Code</a>
                             <button class="bibtex-toggle">BibTeX</button>
