--- a/index.html
+++ b/index.html
@@ -196,11 +196,12 @@
                             <button class="bibtex-toggle">BibTeX</button>
                         </div>
                         <div class="bibtex-content" style="display: none;">
-                            <pre>@article{zhang2024can,
-    title={Can AI Prompt Humans? Multimodal Agents Prompt Players' Game Actions and Show Consequences to Raise Sustainability Awareness},
-    author={Zhang, Qinshi and Wen, Ruoyu and Ding, Zijian and Hendra, Latisha Besariani and LC, Ray},
-    journal={arXiv preprint arXiv:2409.08486},
-    year={2024}
+                            <pre>@inproceedings{zhang2025can,
+   title={Can AI Prompt Humans? Multimodal Agents Prompt Players' Game Actions and Show Consequences to Raise Sustainability Awareness},
+   author={Zhang, Qinshi and Wen, Ruoyu and Ding, Zijian and Hendra, Latisha Besariani and LC, Ray},
+   booktitle={Proceedings of the CHI Conference on Human Factors in Computing Systems},
+   pages={1--23},
+   year={2025}
 }</pre>
                         </div>
                     </div>
