--- a/cv.html
+++ b/cv.html
@@ -133,11 +133,12 @@
                     <button class="bibtex-toggle"><i class="fas fa-quote-right"></i> BibTeX</button>
                 </div>
                 <div class="bibtex-content" style="display: none;">
-                    <pre><code>@article{zhang2024can,
-    title={Can AI Prompt Humans? Multimodal Agents Prompt Players' Game Actions and Show Consequences to Raise Sustainability Awareness},
-    author={Zhang, Qinshi and Wen, Ruoyu and Ding, Zijian and Hendra, Latisha Besariani and LC, Ray},
-    journal={arXiv preprint arXiv:2409.08486},
-    year={2024}
+                    <pre><code>@inproceedings{zhang2025can,
+   title={Can AI Prompt Humans? Multimodal Agents Prompt Players' Game Actions and Show Consequences to Raise Sustainability Awareness},
+   author={Zhang, Qinshi and Wen, Ruoyu and Ding, Zijian and Hendra, Latisha Besariani and LC, Ray},
+   booktitle={Proceedings of the CHI Conference on Human Factors in Computing Systems},
+   pages={1--23},
+   year={2025}
 }</code></pre>
                 </div>
             </div>
