--- a/cv.html
+++ b/cv.html
@@ -133,12 +133,22 @@
                     <button class="bibtex-toggle"><i class="fas fa-quote-right"></i> BibTeX</button>
                 </div>
                 <div class="bibtex-content" style="display: none;">
-                    <pre><code>@inproceedings{zhang2025can,
-   title={Can AI Prompt Humans? Multimodal Agents Prompt Players' Game Actions and Show Consequences to Raise Sustainability Awareness},
-   author={Zhang, Qinshi and Wen, Ruoyu and Ding, Zijian and Hendra, Latisha Besariani and LC, Ray},
-   booktitle={Proceedings of the CHI Conference on Human Factors in Computing Systems},
-   pages={1--23},
-   year={2025}
+                    <pre><code>@inproceedings{10.1145/3706598.3713661,
+   author = {Zhang, Qinshi and Wen, Ruoyu and Hendra, Latisha Besariani and Ding, Zijian and LC, Ray},
+   title = {Can AI Prompt Humans? Multimodal Agents Prompt Players? Game Actions and Show Consequences to Raise Sustainability Awareness},
+   year = {2025},
+   isbn = {9798400713941},
+   publisher = {Association for Computing Machinery},
+   address = {New York, NY, USA},
+   url = {https://doi.org/10.1145/3706598.3713661},
+   doi = {10.1145/3706598.3713661},
+   abstract = {Unsustainable behaviors are challenging to prevent due to their long-term, often unclear consequences. Serious games offer a promising solution by creating artificial environments where players can immediately experience the outcomes of their actions. To explore this potential, we developed EcoEcho, a GenAI-powered game leveraging multimodal agents to raise sustainability awareness. These agents engage players in natural conversations, prompting them to take in-game actions that lead to visible environmental impacts. We evaluated EcoEcho using a mixed-methods approach with 23 participants. Results show a significant increase in intended sustainable behaviors post-game, although attitudes towards sustainability had only marginal effects, suggesting that in-game actions likely can motivate intended real world behaviors despite similar opinions on sustainability. This finding highlights multimodal agents and action-consequence mechanics to effectively raising sustainability awareness and the potential of motivating real-world behavioral change.},
+   booktitle = {Proceedings of the 2025 CHI Conference on Human Factors in Computing Systems},
+   articleno = {1044},
+   numpages = {29},
+   keywords = {Multimodal Agents, Sustainability Awareness, Generative AI, In-Game Action},
+   location = {},
+   series = {CHI '25}
 }</code></pre>
                 </div>
             </div>
